--- a/mean/public/modules/core/views/home.client.view.html
+++ b/mean/public/modules/core/views/home.client.view.html
@@ -2,13 +2,13 @@
 	<div class="jumbotron text-center">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-				<img alt="MEAN.JS" class="img-responsive text-center" src="modules/core/img/brand/logo.png" />
+				<img alt="NGS_LIMS" class="img-responsive text-center" src="modules/core/img/brand/NGSLogo.jpg" />
 			</div>
 		</div>
 		<br>
 		<div class="row">
 			<p class="lead">
-				Open-Source Full-Stack Solution For MEAN Applications
+				Open-Source Laboratory Information Management System for Next-Generation Sequencing
 			</p>
 		</div>
 		<div class="row">
@@ -18,8 +18,7 @@
 		</div>
 	</div>
 	<div>
-		<h2>Congrats! You've configured and run the sample application.</h2>
-		<p>MEAN.JS is a web application boilerplate, which means you should start changing everything :-)</p>
+		<h2>Welcome to LIMS for Next-Generation Sequencing.</h2>
 		<p>This sample application tracks users and articles.</p>
 		<ul>
 			<li>
