Removed the social networking aspect of the login system Added the Next Generation Sequencing Logo to the login page Removed the sign-up for account link

--- a/mean/public/modules/users/css/users.css
+++ b/mean/public/modules/users/css/users.css
@@ -3,7 +3,6 @@
 		position: fixed;
 	}
 }
-
 .remove-account-container {
 	display: inline-block;
 	position: relative;
@@ -13,4 +12,9 @@
 	top: 10px;
 	right: 10px;
 	position: absolute;
+}
+
+.signin-logo {
+  margin-top: 2%;
+  margin-bottom: 1%;
 }
