Added support for a new 'Project' model.
Clicking on 'Continue to Projects' will redirect you to a List Projects
Page, and clicking on 'Create one' will redirecto you to a create
Project Page

--- a/mean/public/modules/core/views/home.client.view.html
+++ b/mean/public/modules/core/views/home.client.view.html
@@ -13,7 +13,7 @@
 		</div>
 		<div class="row">
 			<p>
-				<a class="btn btn-primary btn-lg" href="http://meanjs.org" target="_blank">Continue to Projects</a>
+				<a class="btn btn-primary btn-lg" base href="modules/projects/views/list-project.client.view.html" target="_self">Continue to Projects</a>
 			</p>
 			<p> 
 				THIS IS A PLACE HOLDER FOR LOGIN SCREEN 
