--- a/mean/public/modules/projects/views/edit-project.client.view.html
+++ b/mean/public/modules/projects/views/edit-project.client.view.html
@@ -6,21 +6,39 @@
 		<form name="projectForm" class="form-horizontal" data-ng-submit="update(projectForm.$valid)" novalidate>
 			<fieldset>
 				<div class="form-group" ng-class="{ 'has-error' : submitted && projectForm.title.$invalid}">
-					<label class="control-label" for="title">Title</label>
+					<label class="control-label" for="projectCode">Project Code</label>
 					<div class="controls">
-						<input name="title" type="text" data-ng-model="project.title" id="title" class="form-control" placeholder="Title" required>
+						<input name="title" type="text" data-ng-model="project.projectCode" id="projectCode" class="form-control" placeholder="Project Code (i.e. ABC_123456)" required>
 					</div>
 					<div ng-show="submitted && projectForm.title.$invalid" class="help-block">
-						<p ng-show="projectForm.title.$error.required" class="text-danger">Title is required</p>
+						<p ng-show="projectForm.title.$error.required" class="text-danger">Required*</p>
 					</div>
 				</div>
-				<div class="form-group" ng-class="{ 'has-error' : submitted && projectForm.content.$invalid}">
-					<label class="control-label" for="content">Content</label>
+				<div class="form-group" ng-class="{ 'has-error' : submitted && projectForm.title.$invalid}">
+					<label class="control-label" for="numSamples">Number of Samples</label>
 					<div class="controls">
-						<textarea name="content" data-ng-model="project.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content" required></textarea>
+						<textarea name="content" data-ng-model="project.numSamples" id="numSamples" class="form-control" cols="10" rows="1"  required></textarea>
 					</div>
-					<div ng-show="submitted && projectForm.content.$invalid" class="help-block">
-						<p ng-show="projectForm.content.$error.required" class="text-danger">Content is required</p>
+					<div ng-show="submitted && projectForm.numSamples.$invalid" class="help-block">
+						<p ng-show="projectForm.numSamples.$error.required" class="text-danger">Required*</p>
+					</div>
+				</div>
+				<div class="form-group" ng-class="{ 'has-error' : submitted && projectForm.title.$invalid}">
+					<label class="control-label" for="customerDescription">Customer Description</label>
+					<div class="controls">
+						<textarea name="customerDescription" data-ng-model="project.customerDescription" id="customerDescription" class="form-control" cols="30" rows="1" placeholder="Content" required></textarea>
+					</div>
+					<div ng-show="submitted && projectForm.species.$invalid" class="help-block">
+						<p ng-show="projectForm.customerDescription.$error.required" class="text-danger">Required*</p>
+					</div>
+				</div>
+				<div class="form-group" ng-class="{ 'has-error' : submitted && projectForm.title.$invalid}">
+					<label class="control-label" for="species">Species</label>
+					<div class="controls">
+						<textarea name="species" data-ng-model="project.species" id="species" class="form-control" cols="30" rows="1" placeholder="Description of Species" required></textarea>
+					</div>
+					<div ng-show="submitted && projectForm.species.$invalid" class="help-block">
+						<p ng-show="projectForm.species.$error.required" class="text-danger">Required*</p>
 					</div>
 				</div>
 				<div class="form-group">
