--- a/mean/public/modules/projects/views/list-project.client.view.html
+++ b/mean/public/modules/projects/views/list-project.client.view.html
@@ -1,17 +1,16 @@
 <section data-ng-controller="ProjectsController" data-ng-init="find()">
 	<div class="page-header">
-		<h1>Projects</h1>
+		<h1>All Projects</h1>
 	</div>
 	<div class="list-group">
 		<a data-ng-repeat="project in projects" data-ng-href="#!/projects/{{project._id}}" class="list-group-item">
 			<small class="list-group-item-text">
-				Posted on
-				<span data-ng-bind="project.created | date:'mediumDate'"></span>
-				by
-				<span data-ng-bind="project.user.displayName"></span>
+				Due on
+				<span data-ng-bind="project.due | date:'mediumDate'"></span>
 			</small>
-			<h4 class="list-group-item-heading" data-ng-bind="project.title"></h4>
-			<p class="list-group-item-text" data-ng-bind="project.content"></p>
+			<h4 class="list-group-item-heading" data-ng-bind="project.projectCode"></h4>
+			<p class="list-group-item-text" data-ng-bind="project.description"></p>
+			<p class="list-group-item-text" data-ng-bind="project.species"></p>
 		</a>
 	</div>
 	<div class="alert alert-warning text-center" data-ng-if="projects.$resolved && !projects.length">
