--- a/mean/public/modules/core/views/home.client.view.html
+++ b/mean/public/modules/core/views/home.client.view.html
@@ -13,7 +13,7 @@
 		</div>
 		<div class="row">
 			<p>
-				<a class="btn btn-primary btn-lg" href="/#!/projects/list" target="_self">Continue to Projects</a>
+				<a class="btn btn-primary btn-lg" href="/#!/projects" target="_self">Continue to Projects</a>
 			</p>
 			<p> 
 				THIS IS A PLACE HOLDER FOR LOGIN SCREEN 
