--- a/mean/public/modules/projects/views/list-projects.client.view.html
+++ b/mean/public/modules/projects/views/list-projects.client.view.html
@@ -10,7 +10,7 @@
 			</small>
 			<h4 class="list-group-item-heading" data-ng-bind="project.projectCode"></h4>
 			<p class="list-group-item-text" data-ng-bind="project.description"></p>
-			<p class="list-group-item-text" data-ng-bind="project.species"></p>
+			<!--p class="list-group-item-text" data-ng-bind="project.species"></p-->
 		</a>
 	</div>
 	<div class="alert alert-warning text-center" data-ng-if="projects.$resolved && !projects.length">
