--- a/mean/public/modules/projects/views/view-project.client.view.html
+++ b/mean/public/modules/projects/views/view-project.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="ProjectsController" data-ng-init="findOne()">
 	<div class="page-header">
-		<h1 data-ng-bind="project.title"></h1>
+		<h1 data-ng-bind="project.projectCode"></h1>
 	</div>
 	<div class="pull-right" data-ng-show="authentication.user._id == project.user._id">
 		<a class="btn btn-primary" href="/#!/projects/{{project._id}}/edit">
@@ -12,11 +12,11 @@
 	</div>
 	<small>
 		<em class="text-muted">
-			Posted on
+			Last modified by: 	
 			<span data-ng-bind="project.created | date:'mediumDate'"></span>
 			by
 			<span data-ng-bind="project.user.displayName"></span>
 		</em>
 	</small>
-	<p class="lead" data-ng-bind="project.content"></p>
+	<p class="lead" data-ng-bind="project.description"></p>
 </section>
