added create customer page

--- a/mean/public/modules/core/views/home.client.view.html
+++ b/mean/public/modules/core/views/home.client.view.html
@@ -17,6 +17,7 @@
 			</p>
 			<p> 
 				THIS IS A PLACE HOLDER FOR LOGIN SCREEN 
+				<a href="/#!/customers/create">Create a customer</a>
 			</p>
 		</div>
 	</div>
