Created CreateSpecie page and routes and stuff

--- a/mean/public/modules/core/views/home.client.view.html
+++ b/mean/public/modules/core/views/home.client.view.html
@@ -18,6 +18,7 @@
 			<p> 
 				THIS IS A PLACE HOLDER FOR LOGIN SCREEN 
 				<a href="/#!/customers/create">Create a customer</a>
+				<a href="/#!/species/create">Add a species</a>
 			</p>
 		</div>
 	</div>
