--- a/mean/public/modules/projects/views/create-project.client.view.html
+++ b/mean/public/modules/projects/views/create-project.client.view.html
@@ -11,18 +11,18 @@
 						<input name="projectCode" type="text" data-ng-model="projectCode" id="projectCode" class="form-control" placeholder="i.e. ABC_010203" required>
 					</div>
 				</div>
-				<div class="form-group" ng-class="{ 'has-error': projectForm.customerName.$dirty && projectForm.customerName.$invalid }">
-					<label class="control-label" for="customerName">Customer Name</label>
-					<div class="controls">
-						<input name="customerName" type="text" data-ng-model="customerName" id="customerName" class="form-control" placeholder="Customer Name" required>
-					</div>
-				</div>
-				<div class="form-group" ng-class="{ 'has-error': projectForm.speciesName.$dirty && projectForm.speciesName.$invalid }">
-					<label class="control-label" for="speciesName">Species Name</label>
-					<div class="controls">
-						<input name="speciesName" type="text" data-ng-model="speciesName" id="speciesName" class="form-control" placeholder="Species Name" required>
-					</div>
-				</div>
+				<label>Customer</label>
+			    	<p>Selected: {{customer.selected}}</p>
+				<ui-select ng-model="customer.selected" theme="bootstrap" ng-disabled="disabled" style="min-width: 300px;" rows=2>
+					<ui-select-match placeholder="Select a customer...">{{$select.selected.name}}</ui-select-match>
+				      	<ui-select-choices repeat="customer in customers | filter: {id: $select.search, name: $select.search}">
+						<div ng-bind-html="customer.name | highlight: $select.search"></div>
+						<small>
+						  id: {{customer.id}}
+						  name: <span ng-bind-html="''+customer.name | highlight: $select.search"></span>
+						</small>
+				    	</ui-select-choices>
+			      	</ui-select>
 				<div class="form-group" ng-class="{ 'has-error' : submitted && projectForm.title.$invalid}">
 					<label class="control-label" for="description">Description</label>
 					<div class="controls">
