--- a/mean/public/modules/projects/views/create-project.client.view.html
+++ b/mean/public/modules/projects/views/create-project.client.view.html
@@ -13,13 +13,14 @@
 				</div>
 				<label>Customer</label>
 			    	<p>Selected: {{customer.selected}}</p>
-				<ui-select ng-model="customer.selected" theme="bootstrap" ng-disabled="disabled" style="min-width: 300px;" rows=2>
+				<ui-select ng-model="customer.selected" theme="select2" ng-disabled="disabled" style="min-width: 300px;" rows=2>
 					<ui-select-match placeholder="Select a customer...">{{$select.selected.name}}</ui-select-match>
-				      	<ui-select-choices repeat="customer in customers | filter: {id: $select.search, name: $select.search}">
+				      	<ui-select-choices repeat="customer in customers | filter: {name: $select.search}">
 						<div ng-bind-html="customer.name | highlight: $select.search"></div>
 						<small>
-						  id: {{customer.id}}
-						  name: <span ng-bind-html="''+customer.name | highlight: $select.search"></span>
+						  {{customer.name}} -- 
+						  {{customer.id}}
+						  <!--name: <span ng-bind-html="''+customer.name | highlight: $select.search"></span-->
 						</small>
 				    	</ui-select-choices>
 			      	</ui-select>
