--- a/mean/public/modules/projects/views/create-project.client.view.html
+++ b/mean/public/modules/projects/views/create-project.client.view.html
@@ -11,19 +11,34 @@
 						<input name="projectCode" type="text" data-ng-model="projectCode" id="projectCode" class="form-control" placeholder="i.e. ABC_010203" required>
 					</div>
 				</div>
-				<label>Customer</label>
-			    	<p>Selected: {{customer.selected}}</p>
-				<ui-select ng-model="customer.selected" theme="select2" ng-disabled="disabled" style="min-width: 300px;" rows=2>
-					<ui-select-match placeholder="Select a customer...">{{$select.selected.name}}</ui-select-match>
-				      	<ui-select-choices repeat="customer in customers | filter: {name: $select.search}">
-						<div ng-bind-html="customer.name | highlight: $select.search"></div>
-						<small>
-						  {{customer.name}} -- 
-						  {{customer.id}}
-						  <!--name: <span ng-bind-html="''+customer.name | highlight: $select.search"></span-->
-						</small>
-				    	</ui-select-choices>
-			      	</ui-select>
+                <div class="form-group">
+                    <label class="control-label">Customer</label>
+                    <ui-select ng-model="customer.selected" theme="select2" ng-disabled="disabled"  style="min-width: 300px;" rows=2>
+                        <ui-select-match placeholder="Select a customer...">{{$select.selected.name}}</ui-select-match>
+                            <ui-select-choices repeat="customer in customers | filter: {name: $select.search}">
+                            <div ng-bind-html="customer.name | highlight: $select.search"></div>
+                            <small>
+                              {{customer.name}} --
+                              {{customer.id}}
+                            </small>
+                            </ui-select-choices>
+                        </ui-select>
+                    </ui-select>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Species</label>
+                    <ui-select ng-model="species.selected" theme="select2" ng-disabled="disabled"  style="min-width: 300px;" rows=2>
+                        <ui-select-match placeholder="Select a species...">{{$select.selected.name}}</ui-select-match>
+                        <ui-select-choices repeat="specie in species | filter: {name: $select.search}">
+                            <div ng-bind-html="species.name | highlight: $select.search"></div>
+                            <small>
+                                {{specie.name}} --
+                                {{specie.id}}
+                            </small>
+                        </ui-select-choices>
+                    </ui-select>
+                    </ui-select>
+                </div>
 				<div class="form-group" ng-class="{ 'has-error' : submitted && projectForm.title.$invalid}">
 					<label class="control-label" for="description">Description</label>
 					<div class="controls">
