--- a/mean/public/modules/projects/views/create-project.client.view.html
+++ b/mean/public/modules/projects/views/create-project.client.view.html
@@ -24,6 +24,7 @@
                             </ui-select-choices>
                         </ui-select>
                     </ui-select>
+                    <a href="/#!/customers/create">Add a customer...</a>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Species</label>
@@ -38,6 +39,7 @@
                         </ui-select-choices>
                     </ui-select>
                     </ui-select>
+                    <a href="/#!/species/create">Add a species...</a>
                 </div>
 				<div class="form-group" ng-class="{ 'has-error' : submitted && projectForm.title.$invalid}">
 					<label class="control-label" for="description">Description</label>
