Removing scope issue workaround and displaying redundant selected date
Removing the extra controller and placing its logic into ProjectsController.
This resolves the "due" variable scoping issue and the workaround I
 used. We may want to put this "datapicker" logic in a service so our app
 can use this logic system wide.

--- a/mean/public/modules/projects/views/create-project.client.view.html
+++ b/mean/public/modules/projects/views/create-project.client.view.html
@@ -43,16 +43,13 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label">Due Date</label>
-                    <div ng-controller="DatePicker">
-                            <div class="col-md-6">
-                                <p class="input-group">
-                                      <input type="text" class="form-control" datepicker-popup="{{format}}" data-ng-model="$parent.due" is-open="opened" min-date="minDate" show-weeks="showWeeks" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
-                                      <span class="input-group-btn">
-                                        <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                                      </span>
-                                </p>
-                            </div>
-                        <pre>Selected date is: <em>{{due | date:'fullDate' }}</em></pre>
+                    <div class="col-md-6">
+                        <p class="input-group">
+                              <input type="text" class="form-control" datepicker-popup="{{format}}" data-ng-model="due" is-open="opened" min-date="minDate" show-weeks="showWeeks" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+                              <span class="input-group-btn">
+                                <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                              </span>
+                        </p>
                     </div>
                 </div>
 				<div class="form-group" ng-class="{ 'has-error' : submitted && projectForm.title.$invalid}">
