--- a/mean/public/modules/projects/views/create-project.client.view.html
+++ b/mean/public/modules/projects/views/create-project.client.view.html
@@ -63,7 +63,8 @@
 					<strong data-ng-bind="error"></strong>
 				</div>
 				<div class="form-group">
-					<input type="submit" value="Create" class="btn btn-default">
+                    <input type="submit" class="btn btn-default">&nbsp
+                    <a href back-button class="btn btn-default">Back</a>
 				</div>
 			</fieldset>
 		</form>
