--- a/mean/public/modules/species/views/create-specie.client.view.html
+++ b/mean/public/modules/species/views/create-specie.client.view.html
@@ -18,7 +18,8 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<input type="submit" class="btn btn-default">
+					<input type="submit" class="btn btn-default">&nbsp
+					<a href back-button class="btn btn-default">Back</a>
 				</div>
 				<div data-ng-show="error" class="text-danger">
 					<strong data-ng-bind="error"></strong>
