Added sorting by Due Date and Project Code. If we want to sort by customer and species names, we're either going to have to parse the ProjectCode or find someway to query again to instatntiate the customer and species object ids.

--- a/mean/public/modules/projects/views/list-projects.client.view.html
+++ b/mean/public/modules/projects/views/list-projects.client.view.html
@@ -1,9 +1,14 @@
 <section data-ng-controller="ProjectsController" data-ng-init="find()">
 	<div class="page-header">
 		<h1>All Projects</h1>
+		<div class="form-group">
+			<h4>Sort By</h4>
+			<button class="btn btn-default" ng-click="sortBy('projectCode')">Project Code</button>
+			<button class="btn btn-default" ng-click="sortBy('due')">Due Date</button>
+		</div>
 	</div>
 	<div class="list-group">
-		<a data-ng-repeat="project in projects" data-ng-href="#!/projects/{{project._id}}" class="list-group-item">
+		<a data-ng-repeat="project in projects | orderBy:sortExpr:reverseSort" data-ng-href="#!/projects/{{project._id}}" class="list-group-item">
 			<small class="list-group-item-text">
 				Due on
 				<span data-ng-bind="project.due | date:'mediumDate'"></span>
