--- a/mean/public/modules/projects/views/create-project.client.view.html
+++ b/mean/public/modules/projects/views/create-project.client.view.html
@@ -64,7 +64,7 @@
 				</div>
 				<div class="form-group">
                     <input type="submit" class="btn btn-default">&nbsp
-                    <a href back-button class="btn btn-default">Back</a>
+                    <a href back-button class="btn btn-default">Cancel</a>
 				</div>
 			</fieldset>
 		</form>
