--- a/mean/public/modules/species/views/create-specie.client.view.html
+++ b/mean/public/modules/species/views/create-specie.client.view.html
@@ -14,7 +14,7 @@
 				<div class="form-group">
 					<label class="control-label" for="id">ID</label>
 					<div class="controls">
-						<input name="id" data-ng-model="id" id="id" class="form-control" cols="30" rows="10" placeholder="id"></input>
+						<div name="id" data-ng-bind="newSpecieId()" id="id" class="form-control" cols="30" rows="10" placeholder="id" ng-readOnly="true"></div>
 					</div>
 				</div>
 				<div class="form-group">
