converted species to organisms to avoid naming conflicts

--- a/mean/public/modules/core/views/home.client.view.html
+++ b/mean/public/modules/core/views/home.client.view.html
@@ -22,7 +22,7 @@
 	</div>
 	<div>
 		<h2>Welcome to LIMS for Next-Generation Sequencing.</h2>
-		<p>This application tracks samples, species, and projects status.</p>
+		<p>This application tracks samples, organisms, and projects status.</p>
 		<ul>
 			<li>
 				Click
