--- a/mean/public/modules/organisms/views/create-organism.client.view.html
+++ b/mean/public/modules/organisms/views/create-organism.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="SpeciesController">
 	<div class="page-header">
-		<h1>New Specie</h1>
+		<h1>New Organism</h1>
 	</div>
 	<div class="col-md-12">
 		<form name="specieForm" class="form-horizontal" data-ng-submit="create()" novalidate>
