Added confirmation for deletions on the project view page

--- a/mean/public/modules/projects/views/view-project.client.view.html
+++ b/mean/public/modules/projects/views/view-project.client.view.html
@@ -6,7 +6,7 @@
 		<a class="btn btn-primary" href="/#!/projects/{{project._id}}/edit">
 			<i class="glyphicon glyphicon-edit"></i>
 		</a>
-		<a class="btn btn-primary" data-ng-click="remove();">
+		<a class="btn btn-primary" data-ng-click="confirmRemove();">
 			<i class="glyphicon glyphicon-trash"></i>
 		</a>
 	</div>
@@ -20,3 +20,13 @@
 	</small>
 	<p class="lead" data-ng-bind="project.description"></p>
 </section>
+<script type="text/ng-template" id="deleteConfirmDialog">
+	<div class="ngdialog-message">
+		<h2>Continue?</h2>
+		<h5>This project will be permanently deleted</h5>
+	</div>
+	<div class="ngdialog-buttons">
+		<button type="button" class="ngdialog-button ngdialog-button-primary" data-ng-click="remove()">Delete Project</button>
+		<button type="button" class="ngdialog-button ngdialog-button-secondary" data-ng-click="closeDialog()">Cancel</button>
+	</div>
+</script>
