--- a/mean/public/modules/projects/views/create-project.client.view.html
+++ b/mean/public/modules/projects/views/create-project.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="ProjectsController">
+<section data-ng-controller="ProjectsController" ng-init="init()">
 	<div class="page-header">
 		<h1>New Project</h1>
 	</div>
@@ -6,10 +6,14 @@
 		<form name="projectForm" class="form-horizontal" data-ng-submit="create()" novalidate>
 			<fieldset>
 				<div class="form-group" ng-class="{ 'has-error': projectForm.projectCode.$dirty && projectForm.projectCode.$invalid }">
-					<label class="control-label" for="projectCode">Project Code</label>
-					<div class="controls">
-						<input name="projectCode" type="text" data-ng-model="projectCode" id="projectCode" class="form-control" placeholder="ABC_010203" required>
-					</div>
+                    <label class="control-label" for="projectCode">Project Identifier</label>
+                    <div class="controls">
+                        <input name="projectCode" type="text" maxlength="3" data-ng-model="projectIdent" ng-change="validateChar()" id="projectIdent" class="form-control" placeholder="ABC" required>
+                    </div>
+                    <label class="control-label" for="projectCode">Project Code</label>
+                    <div class="controls">
+                        <input name="projectCode" type="text" readOnly="true" data-ng-value="projectCode()" id="projectCode" class="form-control" placeholder="XXXXXX">
+                    </div>
 				</div>
                 <div class="form-group">
                     <label class="control-label">Customer</label>
