Fixes issue #30. I had some weird git mistaches between my laptop and desktop that caused the due date and description not to update.

--- a/mean/public/modules/projects/views/edit-project.client.view.html
+++ b/mean/public/modules/projects/views/edit-project.client.view.html
@@ -43,7 +43,7 @@
                     <label class="control-label">Due Date</label>
                     <div class="col-md-6">
                         <p class="input-group">
-                              <input type="text" class="form-control" datepicker-popup="{{format}}" data-ng-model="project.due" is-open="opened" min-date="minDate" show-weeks="showWeeks" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+                              <input type="text" class="form-control" datepicker-popup="{{format}}" data-ng-model="project.due" is-open="opened" min-date="minDate" show-weeks="showWeeks" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
                               <span class="input-group-btn">
                                 <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                               </span>
