--- a/mean/public/modules/projects/views/create-project.client.view.html
+++ b/mean/public/modules/projects/views/create-project.client.view.html
@@ -1,72 +1,77 @@
 <section data-ng-controller="ProjectsController" ng-init="init()">
-	<div class="page-header">
-		<h1>New Project</h1>
-	</div>
-	<div class="col-md-12">
-		<form name="projectForm" class="form-horizontal" data-ng-submit="create()" novalidate>
-			<fieldset>
-				<div class="form-group" ng-class="{ 'has-error': projectForm.projectCode.$dirty && projectForm.projectCode.$invalid }">
-                    <label class="control-label" for="projectCode">Project Code</label>
-                    <div class="controls">
-                        <input name="projectCode" type="text" readOnly="true" data-ng-value="projectCode()" id="projectCode" class="form-control" placeholder="XXX_XXXXXX">
-                    </div>
-				</div>
+    <div class="page-header">
+        <h2>New Project</h2>
+    </div>
+
+    <div class="content">
+        <form class = "form-horizontal" data-ng-submit="create()" novalidate>
+            <fieldset>
                 <div class="form-group">
-                    <label class="control-label">Customer</label>
-                    <ui-select ng-model="customer.selected" theme="select2" ng-disabled="disabled"  style="min-width: 300px;" rows=2>
-                        <ui-select-match placeholder="Select a customer...">{{$select.selected.name}}</ui-select-match>
+                    <label class="control-label col-xs-4" for="projectCode">Project Code</label>
+                    <div class="col-xs-4" ng-class="{ 'has-error': projectForm.projectCode.$dirty && projectForm.projectCode.$invalid }">
+                        <input name="projectCode" type="text" readOnly="true" data-ng-value="projectCode()" id="projectCode" class="form-control text-center" placeholder="XXX_XXXXXX">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="control-label col-xs-4">Customer</label>
+                    <div class="form-control-static col-xs-4">
+                        <ui-select ng-model="customer.selected" theme="select2" ng-disabled="disabled"  style="min-width: 360px;" rows=2>
+                            <ui-select-match placeholder="Select a customer...">{{$select.selected.name}}</ui-select-match>
                             <ui-select-choices repeat="customer in customers | filter: {name: $select.search}">
-                            <div ng-bind-html="customer.name | highlight: $select.search"></div>
-                            <small>
-                              {{customer.name}} --
-                              {{customer.id}}
-                            </small>
+                                <div ng-bind-html="customer.name | highlight: $select.search"></div>
                             </ui-select-choices>
-                    </ui-select>
-                    <a href="/#!/customers/create">Add a customer</a>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Organism</label>
-                    <ui-select ng-model="organism.selected" theme="select2" ng-disabled="disabled"  style="min-width: 300px;" rows=2>
-                        <ui-select-match placeholder="Select an organism...">{{$select.selected.name}}</ui-select-match>
-                        <ui-select-choices repeat="organism in organisms | filter: {name: $select.search}">
-                            <div ng-bind-html="organisms.name | highlight: $select.search"></div>
-                            <small>
-                                {{organism.name}} --
-                                {{organism.id}}
-                            </small>
-                        </ui-select-choices>
-                    </ui-select>
-                    <a href="/#!/organisms/create">Add an organism</a>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Due Date</label>
-                    <div class="col-md-6">
-                        <p class="input-group">
-                              <input type="text" class="form-control" datepicker-popup="{{format}}" data-ng-model="due" is-open="opened" min-date="minDate" show-weeks="showWeeks" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
-                              <span class="input-group-btn">
-                                <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                              </span>
-                        </p>
+                        </ui-select>
+                    </div>
+                    <div class="form-control-static  col-xs-2">
+                        <a class="btn btn-primary btn-xs" href="/#!/customers/create">
+                            <i class="glyphicon glyphicon-plus"></i>
+                            Create a Customer
+                        </a>
                     </div>
                 </div>
-				<div class="form-group" ng-class="{ 'has-error' : submitted && projectForm.title.$invalid}">
-					<label class="control-label" for="description">Description</label>
-					<div class="controls">
-						<textarea name="description" data-ng-model="description" id="description" class="form-control" cols="30" rows="5" required></textarea>
-					</div>
-					<div ng-show="submitted && projectForm.description.$invalid" class="help-block">
-						<p ng-show="projectForm.description.$error.required" class="text-danger">Required*</p>
-					</div>
-				</div>
-				<div data-ng-show="error" class="text-danger">
-					<strong data-ng-bind="error"></strong>
-				</div>
-				<div class="form-group">
+                <div class="form-group row">
+                    <label class="col-xs-4 control-label">Organism</label>
+                    <div class="form-control-static col-xs-4">
+                        <ui-select ng-model="organism.selected" theme="select2" ng-disabled="disabled"  style="min-width: 360px;" rows=2>
+                            <ui-select-match placeholder="Select an organism...">{{$select.selected.name}}</ui-select-match>
+                            <ui-select-choices repeat="organism in organisms | filter: {name: $select.search}">
+                                <div ng-bind-html="organism.name | highlight: $select.search"></div>
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
+                    <div class="form-control-static  col-xs-2">
+                        <a class="btn btn-primary btn-xs" href="/#!/organisms/create">
+                            <i class="glyphicon glyphicon-plus"></i>
+                            Create an Organism
+                        </a>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="control-label col-xs-4" for="datePickerControl">Due Date</label>
+                    <div class="input-group col-xs-4" style="padding-left: 16px; padding-right: 16px;">
+                        <input type="text" class="form-control" datepicker-popup="{{format}}" data-ng-model="due" is-open="opened" min-date="minDate" show-weeks="showWeeks" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="datePickerControl" />
+                          <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                          </span>
+                    </div>
+                </div>
+                <div class="form-group" ng-class="{ 'has-error' : submitted && projectForm.title.$invalid}">
+                    <label class="control-label col-xs-4" for="description">Description</label>
+                    <div class="controls col-xs-4">
+                        <textarea name="description" data-ng-model="description" id="description" class="form-control" cols="30" rows="5" required></textarea>
+                    </div>
+                    <div ng-show="submitted && projectForm.description.$invalid" class="help-block">
+                        <p ng-show="projectForm.description.$error.required" class="text-danger">Required*</p>
+                    </div>
+                </div>
+                <div data-ng-show="error" class="text-danger">
+                    <strong data-ng-bind="error"></strong>
+                </div>
+                <div class="form-group text-center">
                     <input type="submit" class="btn btn-default">&nbsp
                     <a href back-button class="btn btn-default">Cancel</a>
-				</div>
-			</fieldset>
-		</form>
-	</div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
 </section>
